chore: synced file(s) with sumup/apis (#84)
