# openapi.yaml
@@ -773,12 +773,6 @@ paths:
                     format: float
                   currency:
                     $ref: '#/components/schemas/Currency'
-                  pay_to_email:
-                    description: Email address of the registered user (merchant) to whom the payment is made.
-                    type: string
-                    format: email
-                    deprecated: true
-                    x-deprecation-notice: '`pay_to_email` is deprecated, use `merchant_code` instead.'
                   merchant_code:
                     description: Unique identifying code of the merchant profile.
                     type: string
@@ -2793,7 +2787,7 @@ paths:
       parameters:
         - name: query
           in: query
-          description: |
+          description: |-
             Search query used to filter users that match given query term.
 
             Current implementation allow querying only over the email address.
@@ -2868,7 +2862,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Operator'
         '403':
-          description: error response for compat API calls
+          description: Error response for compat API calls.
           content:
             application/json:
               schema:
@@ -2891,13 +2885,14 @@ paths:
       parameters:
         - name: operator_id
           in: path
+          description: The unique identifier for the operator.
           required: true
           schema:
             type: integer
             format: int32
       responses:
         '200':
-          description: Operator.
+          description: Information about the requested operator.
           content:
             application/json:
               schema:
@@ -2919,6 +2914,7 @@ paths:
       parameters:
         - name: operator_id
           in: path
+          description: The unique identifier for the operator.
           required: true
           schema:
             type: integer
@@ -2979,10 +2975,12 @@ paths:
       x-scopes: []
     delete:
       operationId: DeactivateSubAccount
-      summary: Disable an operator
+      summary: Disable an operator.
+      description: Disable the specified operator for the merchant account.
       parameters:
         - name: operator_id
           in: path
+          description: The unique identifier for the operator.
           required: true
           schema:
             type: integer
@@ -3043,6 +3041,11 @@ paths:
           description: Filter memberships by the sandbox status of the resource the membership is in.
           schema:
             type: boolean
+        - name: resource.name
+          in: query
+          description: Filter memberships by the name of the resource the membership is in.
+          schema:
+            type: string
       responses:
         '200':
           description: Returns a list of Membership objects.
@@ -3743,14 +3746,12 @@ paths:
               operationId: UpdateReader
               parameters:
                 id: $response.body#/id
-              description: |
-                Update the reader object. This can be used to set a name after using this endpoint to verify the pairing code.
+              description: Update the reader object. This can be used to set a name after using this endpoint to verify the pairing code.
             DeleteReaderByID:
               operationId: DeleteReader
               parameters:
                 id: $response.body#/id
-              description: |
-                Delete the reader.
+              description: Delete the reader.
       security:
         - apiKey: []
         - oauth2:
@@ -3805,17 +3806,13 @@ paths:
             $ref: '#/components/schemas/ReaderID'
       responses:
         '200':
-          description: |
-            Returns a Reader object for a valid identifier.
+          description: Returns a Reader object for a valid identifier.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Reader'
-        '400':
-          description: Malformed request.
         '404':
-          description: |
-            The requested Reader resource does not exists.
+          description: The requested Reader resource does not exists.
       security:
         - apiKey: []
         - oauth2:
@@ -4456,12 +4453,6 @@ components:
           example: 10.1
         currency:
           $ref: '#/components/schemas/Currency'
-        pay_to_email:
-          description: Email address of the registered user (merchant) to whom the payment is made.
-          type: string
-          format: email
-          deprecated: true
-          x-deprecation-notice: '`pay_to_email` is deprecated, use `merchant_code` instead.'
         merchant_code:
           description: Unique identifying code of the merchant profile.
           type: string
@@ -4527,12 +4518,6 @@ components:
         merchant_code:
           description: Unique identifying code of the merchant profile.
           type: string
-        pay_to_email:
-          description: Email address of the registered user (merchant) to whom the payment is made.
-          type: string
-          format: email
-          deprecated: true
-          x-deprecation-notice: '`pay_to_email` is deprecated, use `merchant_code` instead.'
         description:
           description: 'Short description of the checkout visible in the SumUp dashboard. The description can contribute to reporting, allowing easier identification of a checkout.'
           type: string
@@ -5925,6 +5910,7 @@ components:
       type: string
       format: date-time
     Operator:
+      description: Operator account for a merchant.
       type: object
       properties:
         id:
@@ -5964,7 +5950,7 @@ components:
         - permissions
         - account_type
     CompatError:
-      description: Error
+      description: Error object for compat API calls.
       type: object
       properties:
         error_code:
@@ -6380,7 +6366,7 @@ components:
         - `unknown` - The reader status is unknown.
         - `processing` - The reader is created and waits for the physical device to confirm the pairing.
         - `paired` - The reader is paired with a merchant account and can be used with SumUp APIs.
-        - `expired` - The pairing is expired and no longer usable with the account. The resource needs to get recreated
+        - `expired` - The pairing is expired and no longer usable with the account. The resource needs to get recreated.
       type: string
       example: paired
       enum:
@@ -6389,8 +6375,7 @@ components:
         - paired
         - expired
     ReaderDevice:
-      description: |
-        Information about the underlying physical device.
+      description: Information about the underlying physical device.
       type: object
       properties:
         identifier:
@@ -6694,14 +6679,12 @@ components:
       operationId: UpdateReader
       parameters:
         id: $response.body#/id
-      description: |
-        Update the reader object. This can be used to set a name after using this endpoint to verify the pairing code.
+      description: Update the reader object. This can be used to set a name after using this endpoint to verify the pairing code.
     DeleteReaderByID:
       operationId: DeleteReader
       parameters:
         id: $response.body#/id
-      description: |
-        Delete the reader.
+      description: Delete the reader.
   requestBodies:
     BankAccounts:
       content:
@@ -7233,7 +7216,7 @@ components:
                 error_code: CHECKOUT_PROCESSED
                 message: Checkout is already processed
     CompatErrorResponse:
-      description: error response for compat API calls
+      description: Error response for compat API calls.
       content:
         application/json:
           schema:
@@ -7380,8 +7363,7 @@ tags:
       - $ref: '#/components/schemas/Role'
     x-beta: true
   - name: Readers
-    description: |
-      A reader represents a device that accepts payments. You can use the SumUp Solo to accept in-person payments.
+    description: A reader represents a device that accepts payments. You can use the SumUp Solo to accept in-person payments.
     x-core-objects:
       - $ref: '#/components/schemas/Reader'
     x-beta: true
